FEAT: Calendar Event Form DropDown

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -14,3 +14,12 @@
 .calendar {
   padding: 2px;
 }
+
+.assigned-input {
+  width: 20px;
+
+  .assigned-btn {
+    margin: -5px;
+    width: 5px;
+  }
+}
