--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,14 @@ $orange: #E67E22;
 $green: #adce74;
 $gray: #707070;
 $light-gray: #ECECEC;
+
+
+
+$baby-blue: #86BFC1 !default;
+$baby-orange: #F1B46A !default;
+$baby-green: #B8D586 !default;
+$baby-powder: #FDFFFC !default;
+$baby-purple: #AEADD7 !default;
+$baby-yellow: #FFF5AD !default;
+$baby-red: #F99D9D !default;
+$baby-gray: #F5F5F5 !default;
