--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,12 +1,13 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  padding: 50px 0;
+  width: 100%;
 }
 
 .banner h1 {
   margin: 0;
-  color: white;
+  color: $gray;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
@@ -14,7 +15,7 @@
 
 .banner p {
   font-size: 20px;
-  color: white;
+  color: $light-gray;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
