--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,16 @@
 .footer {
-  background: #F4F4F4;
+  background: $baby-gray;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 72px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  margin-top: 30px;
 }
 .footer-links {
   display: flex;
@@ -23,6 +27,6 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: $baby-red;
 }
 
