--- a/app/views/events/_month.html.erb
+++ b/app/views/events/_month.html.erb
@@ -1,28 +1,64 @@
-<div class="container">
+<div class="calendar-card ">
   <%= month_calendar(attribute: :start_date, events: schedule.events) do |date, events| %>
     <%= date.day %>
 
     <% events.each do |event| %>
       <% schedule_event = ScheduleEvent.find_by event: event, schedule: schedule %>
+      <% team_members = [] %>
+      <% current_user.team.users.each do |user| %>
+      <% team_members << (@user = user.first_name) if user.unavailable_days.exclude?(event.start_date) %>
+      <% end %>
 
       <% event.recruits.each do |recruit| %>
 
       <% if recruit.athlete.grad_year == 2022 %>
-        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between">
-          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
-          <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
+        <div class="btn-group bg-danger">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
       <% elsif recruit.athlete.grad_year == 2023 %>
-        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
-          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
-          <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
+        <div class="btn-group bg-primary">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
       <% elsif recruit.athlete.grad_year == 2024 %>
-        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-info d-flex justify-content-between">
-          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
-          <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
+        <div class="btn-group bg-info">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-info d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
       <% else %>
-        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
-          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
-          <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
+        <div class="btn-group bg-success">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-success d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
       <% end %>
     <% end %>
     <% end %>
