FEAT: Adding Header to Pages

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: $baby-gray;
+  background: $light-gray;
   z-index: 9999999;
   color: rgba(0,0,0,0.3);
 }
