ARCH: Gem Country

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,9 +1,16 @@
-<div class="container-fluid mt--9">
+<%= render 'shared/header' %>
+<div class="container-fluid mt--6">
   <div class="row">
-    <div class="col-xl-9">
+    <div class="col-xl-9 ">
       <%= render partial: 'events/month', locals: { schedule: @schedule, schedule_event: @schedule_event }  %>
     </div>
     <div class="col-xl-2">
       <%= render 'shared/form' %>
     </div>
   </div>
+  <div class="row">
+      <div class="col-xl-9 ">
+        <%= render 'athletes/athletes'%>
+      </div>
+  </div>
+</div>
