--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -4,5 +4,5 @@
   background-position: center;
   padding: 70px 0;
   width: 100%;
-  background: linear-gradient($light-gray, #f5f5f552);
+  background-color: $light-gray;
 }
