--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -2,7 +2,11 @@
   // background: $baby-gray;
   background-size: cover;
   background-position: center;
-  padding: 70px 0;
+  padding: 40%;
   width: 100%;
   background-color: $light-gray;
+  z-index: -1;
+  margin-bottom: -25%;
 }
+
+
