--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -1,120 +1,15 @@
-
-    td {
-        .progress {
-            height: 3px;
-            width: 120px;
-            margin: 0;
-        }
-    }
-
-    td,
-    th {
-        white-space: nowrap;
-    }
-
-
-    // Vetical align table content
-
-    .align-items-center {
-        td,
-        th {
-            vertical-align: middle;
-        }
-    }
-
-
-// Flush tables
-
-.table-flush {
-    td,
-    th {
-        border-left: 0;
-        border-right: 0;
-    }
-
-    tbody {
-        tr {
-            &:first-child {
-                td,
-                th {
-                    border-top: 0;
-                }
-            }
-
-            &:last-child {
-                td,
-                th {
-                    border-bottom: 0;
-                }
-            }
-        }
-    }
+.table-custom-scrollbar {
+position: relative;
+height: 200px;
+overflow: auto;
+}
+.table-wrapper-scroll-y {
+display: block;
 }
 
-
-// Tables inside cards
-
-.card {
-    .table {
-        margin-bottom: 0;
-
-        td,
-        th {
-            padding-left: $card-spacer-x;
-            padding-right: $card-spacer-x;
-        }
-    }
-}
-
-
-// Fixes for custom elements inside tables
-
-.table {
-    .custom-toggle {
-        display: block;
-    }
-}
-
-.table  {
-    [data-sort] {
-        cursor: pointer;
-    }
-
-    .thead-dark {
-        [data-sort] {
-            &::after {
-                margin-left: .25rem;
-            }
-        }
-    }
-
-    .thead-light {
-        [data-sort] {
-            &::after {
-                margin-left: .25rem;
-            }
-        }
-    }
-}
-
-
-.table-action {
-    font-size: $font-size-sm;
-
-    margin: 0 .25rem;
-
-    &:hover {
-        color: darken;
-    }
-}
-
-.table-action-delete {
-    &:hover {
-        color: theme-color("danger");
-    }
-}
-
-.table-dark {
-    .table{
-    }
+.athlete-index-card {
+  border-radius: 20px;
+  background-color: $baby-powder;
+  padding: 4px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
