--- a/app/assets/stylesheets/recruits/index.scss
+++ b/app/assets/stylesheets/recruits/index.scss
@@ -2,7 +2,7 @@
   h1 {
     font-size: 70px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   a {
@@ -25,4 +25,34 @@
     border-radius: 5px;
     font-size: 20px;
   }
+}
+
+.recruit-index-card {
+  border-radius: 20px;
+  background-color: $baby-powder;
+  padding: 4px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.recruit-index-table {
+  background-color: transparent;
+
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    margin-bottom: 5px;
+
+    .btn-flat {
+      border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    font-size: 0.875rem;
+    background-color: #d57149;
+    color: #fff5ea;
+    text-align: center;
+
+    &:hover {
+      background-color: #e89f71;
+      }
+  }
+}
 }
