--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -1,7 +1,7 @@
-<div class="mt-5 container athlete-index">
+<div class='mt-5 athlete-index-card'>
+<div class="mt-1 container athlete-index-table">
 
-  <h1>Athletes</h1>
-
+  <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
 
 
   <div class='input-group-prepend'>
@@ -10,26 +10,26 @@
 
   <div class="table-responsive">
 
-  <table class="table">
+  <table class="table table-boredered table-hover">
     <thead>
       <tr class="athlete-table-header pt-3">
         <th scope='col' class="text-center sort" data-sort='name' >Name</th>
         <th scope='col' class="text-center sort" data-sort='grad_year' >Graduation Year</th>
         <th scope='col' class="text-center sort" data-sort='nationality'>Nationality</th>
-        <th scope='col' class="text-center sort" data-sort='athlete_team'>Team</th>
+       <!--  <th scope='col' class="text-center sort" data-sort='athlete_team'>Team</th> -->
         <!-- <th scope='col' class="text-center sort" data-sort='athlete_team_url'>Team URL</th> -->
         <th scope='col' class="text-center sort" data-sort='rating'>Rating</th>
         <th scope='col' class="text-center sort"></th>
         <th scope='col' class="text-center sort"></th>
       </tr>
     </thead>
-
+  <div class="table-wrapper-scroll-y table-custom-scrollbar">
     <tbody>
       <% @athletes.each do |athlete| %>
         <tr class="athlete-table-content">
           <th scope='row'>
-            <div class='d-flex justify-content-around'>
-              <%= image_tag "icon.png", class: 'avatar' %>
+            <div class='d-flex justify-content-start'>
+              <%= image_tag "icon.png", class: 'avatar-small' %>
             <span class='name d-flex ml-4'>
                 <%= athlete.first_name %> <%= athlete.last_name %>
             </span>
@@ -37,35 +37,37 @@
           </th>
           <% case athlete.grad_year %>
           <% when 2022 %>
-            <td class="text-center text-danger"><%= athlete.grad_year %></td>
+            <td class="text-center grad_year text-danger"><%= athlete.grad_year %></td>
           <% when 2023 %>
-            <td class="text-center text-primary"><%= athlete.grad_year %></td>
+            <td class="text-center grad_year text-primary"><%= athlete.grad_year %></td>
           <% when 2024 %>
-            <td class="text-center text-info"><%= athlete.grad_year %></td>
+            <td class="text-center grad_year text-info"><%= athlete.grad_year %></td>
           <% when 2025 %>
-            <td class="text-center text-success"><%= athlete.grad_year %></td>
+            <td class="text-center grad_year text-success"><%= athlete.grad_year %></td>
           <% end %>
 
-          <td class="text-center row">
+          <td class="text-center">
             <div class='d-flex justify-content-around'>
-              <%= c = ISO3166::Country.find_country_by_nationality(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
-               <%#= c.alpha2 %>
-              <%#= image_tag("https://flagcdn.com/16x12/#{ISO3166::Country.find_country_by_name('athlete.nationality').alpha2}.png") %>
-               <span class='nationality d-flex ml-4'>
+              <%= c = ISO3166::Country.find_country_by_name(athlete.nationality).emoji_flag if ISO3166::Country.find_country_by_name(athlete.nationality)  %>
+               <span class='nationality d-flex ml-1'>
                  <%= athlete.nationality %>
                 </span>
             </div>
             </td>
-          <td class="text-center"><%= athlete.athlete_team %></td>
+          <!-- <td class="text-center"><%#= athlete.athlete_team %></td> -->
          <!--  <td class="text-center"><%#= athlete.athlete_team_url %></td> -->
-          <td class="text-center"><%= athlete.rating %></td>
+          <td class="text-center rating"><%= athlete.rating %></td>
           <td><%= link_to 'VIEW', athlete %></td>
           <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %>
         </tr>
       <% end %>
     </tbody>
+    </div>
   </table>
 </div>
+</div>
+</div>
+
 
 
 
