--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/header' %>
 <div class="container-fluid mt--6">
   <div class="row">
-    <div class="col-xl-9 ">
+    <div class="col-xl-10">
       <%= render partial: 'events/month', locals: { schedule: @schedule, schedule_event: @schedule_event }  %>
     </div>
     <div class="col-xl-2">
@@ -9,8 +9,12 @@
     </div>
   </div>
   <div class="row">
-      <div class="col-xl-9 ">
-        <%= render 'athletes/athletes'%>
-      </div>
+    <div class="col-xl-7">
+      <%= render 'athletes/athletes'%>
+    </div>
+    <div class="col-xl-5">
+      <%= render 'recruits/recruits' %>
+    </div>
+    <div class="m-5 p-5"></div>
   </div>
 </div>
