--- a/app/assets/stylesheets/athletes/index.scss
+++ b/app/assets/stylesheets/athletes/index.scss
@@ -5,7 +5,7 @@
 
 .athlete-index {
   h1 {
-    font-size: 70px;
+    font-size: 90px;
     text-align: center;
     margin-bottom: 20px;
   }
@@ -72,4 +72,10 @@
   background-color: $baby-powder;
   padding: 4px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.emoji_flag {
+  font-size: 20px;
+  margin: -20px;
+  padding: 10px;
 }
