--- a/app/assets/stylesheets/athletes/show.scss
+++ b/app/assets/stylesheets/athletes/show.scss
@@ -1,7 +1,8 @@
 .athlete-show {
-  margin: auto;
+  // margin: auto;
   width: 60%;
   height: 100%;
+  margin: -30% auto auto auto;
 
   a {
     color: #d57149;
@@ -26,6 +27,13 @@
     background-color: #d57149;
     color: #f4f4f2;
   }
+}
+
+.athlete-show-card {
+  border-radius: 20px;
+  background-color: $baby-powder;
+  padding: 30px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 
