--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -13,7 +13,7 @@
   <table class="table table-boredered table-hover">
     <thead>
       <tr class="athlete-table-header pt-3">
-        <th scope='col' class="text-center sort" data-sort='name' >Name</th>
+        <th scope='col' class="text-left sort" data-sort='name'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Name</th>
         <th scope='col' class="text-center sort" data-sort='grad_year' >Graduation Year</th>
         <th scope='col' class="text-center sort" data-sort='nationality'>Nationality</th>
        <!--  <th scope='col' class="text-center sort" data-sort='athlete_team'>Team</th> -->
