--- a/app/views/pages/_sidenav.html.erb
+++ b/app/views/pages/_sidenav.html.erb
@@ -1,33 +1,51 @@
 <!-- SideNav slide-out button -->
-      <nav clas="sidenav vh-100">
-        <ul class="nav flex-column list-unstyled components text-center" id="myTab" role="tablist" >
-          <li class="nav-item">
-            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
-              <i class="fa fa-home"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-             <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
-              <i class="fa fa-briefcase"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-           <a class="nav-link" id="messages-tab" data-toggle="tab" href="#messages" role="tab" aria-controls="messages" aria-selected="false">
-              <i class="fa fa-wrench"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="settings-tab" data-toggle="tab" href="#settings" role="tab" aria-controls="settings" aria-selected="false">
-              <i class="fas fa-pencil-alt"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="settings-tab" data-toggle="tab" href="#settings" role="tab" aria-controls="settings" aria-selected="false">
-              <i class="fa fa-envelope"></i>
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-
+<nav clas="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs" id="sidenav-main">
+  <div class="sidenav-header  align-items-center">
+    <div class="navbar-avatar">
+      <%= image_tag "icon.png", class: 'avatar-xl-square' %>
+      <div>
+      <h4>Welcome Back, <%= current_user.first_name.capitalize %></h4>
+      <p>Let's get to recruiting!</p>
+      </div>
+    </div>
+  <div class="navbar-inner">
+    <div class="collapse navbar-collapse" id="sidenav-collapse-main">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active"><%= link_to 'DASHBOARD', dashboard_path %></a>
+        </li>
+        <div id=accordion>
+        <li class="nav-item">
+          <a class="nav-link btn-link" data-toggle="collapse" data-target='#collapseOne' aria-expanded="true" aria-controls="collapseOne">SCHEDULE</a>
+        </li>
+        <div id='collapseOne' class='collapse show' aria-labelledby='headingOne' data-parent='#accordion'>
+          <ul>
+            <li class='nav-item'>
+              <a class='nav-link'><%= link_to '#' %>MONTH</a>
+            </li>
+            <li class='nav-item'>
+              <a class='nav-link'><%= link_to '#' %>WEEK</a>
+            </li>
+            <li class='nav-item'>
+              <a class='nav-link'><%= link_to '#' %>TRI-MONTH</a>
+            </li>
+            <li class='nav-item'>
+              <a class='nav-link'><%= link_to '#' %>TRI-MONTH</a>
+            </li>
+          </ul>
+        </div>
+        </div>
+        <li class="nav-item">
+          <a class="nav-link"><%#= link_to 'MESSAGES', messages_path %><%= link_to '#' %>MESSAGES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"><%= link_to 'RECRUITS', recruits_path %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"><%= link_to 'ATHLETES', athletes_path %></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
