--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/header' %>
+<%= render 'sidenav' %>
 <div class="container-fluid mt--6">
   <div class="row">
     <div class="col-xl-10">
@@ -15,6 +16,6 @@
     <div class="col-xl-5">
       <%= render 'recruits/recruits' %>
     </div>
-    <div class="m-5 p-5"></div>
+    <div class="my-5 py-5"></div>
   </div>
 </div>
