--- a/app/views/pages/oldinfo.html.erb
+++ b/app/views/pages/oldinfo.html.erb
@@ -36,3 +36,44 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- Old Athletes Index Page -->
+  <table>
+    <thead>
+      <tr class="athlete-table-header pt-3">
+        <td class="text-center">Name</td>
+        <td class="text-center">Graduation Year</td>
+        <td class="text-center">Nationality</td>
+        <td class="text-center">Team</td>
+        <td class="text-center">Team URL</td>
+        <td class="text-center">Rating</td>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @athletes.each do |athlete| %>
+        <tr class="athlete-table-content">
+          <td><%= athlete.first_name %> <%= athlete.last_name %></td>
+          <td class="text-center"><%= athlete.grad_year %></td>
+          <td class="text-center"><%= athlete.nationality %></td>
+          <td class="text-center"><%= athlete.athlete_team %></td>
+          <td class="text-center"><%= athlete.athlete_team_url %></td>
+          <td class="text-center"><%= athlete.rating %></td>
+          <td><%= link_to 'VIEW', athlete %></td>
+          <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div class="my-5"></div>
+</div>
+<div>
+
+
+
+
+
+
+<!--   Old Recruits Index Page -->
