--- a/app/views/pages/_week.html.erb
+++ b/app/views/pages/_week.html.erb
@@ -1,3 +1,71 @@
-<%= week_calendar(number_of_weeks: 1, attribute: :start_date, appearances: @appearances) do |date| %>
-  <%= date %>
-<% end %>
+<div class="mt-5 calendar-card">
+<div class="mt-1 container week-schedule">
+
+
+<%= week_calendar(number_of_weeks: 1, attribute: :start_date, events: schedule.events) do |date, events| %>
+  <%= date.day %>
+
+    <% events.each do |event| %>
+      <% schedule_event = ScheduleEvent.find_by event: event, schedule: schedule %>
+      <% team_members = [] %>
+      <% current_user.team.users.each do |user| %>
+      <% team_members << (@user = user.first_name) if user.unavailable_days.exclude?(event.start_date) %>
+    <% end %>
+
+      <% event.recruits.each do |recruit| %>
+
+      <% case recruit.athlete.grad_year %>
+      <% when 2022 %>
+        <div class="btn-group bg-danger">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
+      <% when 2023 %>
+        <div class="btn-group bg-primary">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
+      <% when 2024 %>
+        <div class="btn-group bg-info">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-info d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
+      <% when 2025 %>
+        <div class="btn-group bg-success">
+        <a href="/events/<%= event.id %>" class="calendar btn-sm list-group-item list-group-item-action list-group-item-success d-flex justify-content-between" type='button'>
+          <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+        </a>
+          <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only"></span>
+          </button>
+          <div class="dropdown-menu">
+            <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+    <% end %>
+  <% end %>
+</div>
+</div>
