--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/header' %>
-<%= render 'sidenav' %>
+<%#= render 'sidenav' %>
 <div class="container-fluid mt--6">
   <div class="row">
     <div class="col-xl-10">
@@ -16,6 +16,11 @@
     <div class="col-xl-5">
       <%= render 'recruits/recruits' %>
     </div>
-    <div class="my-5 py-5"></div>
+  </div>
+  <div class="row">
+    <div class="col-xl-11">
+      <%= render partial: 'week', locals: { schedule: @schedule, schedule_event: @schedule_event }   %>
+    </div>
+     <div class="my-5 py-5"></div>
   </div>
 </div>
