FEAT: Added Cards Around Schedules on Schedule Index

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -21,7 +21,7 @@
     <div class="col-xl-9">
       <%= render partial: 'schedules/tri_month', locals: { schedule: @schedule, schedule_event: @schedule_event }   %>
 
-      <%= render partial: 'week', locals: { schedule: @schedule, schedule_event: @schedule_event }   %>
+      <%= render partial: 'schedules/week', locals: { schedule: @schedule, schedule_event: @schedule_event }   %>
     </div>
     <div class='col-xl-3'>
       <%= render partial: 'week', locals: { schedule: @schedule, schedule_event: @schedule_event }   %>
