--- a/app/assets/stylesheets/events/show.scss
+++ b/app/assets/stylesheets/events/show.scss
@@ -74,92 +74,25 @@
   right: 0;
 }
 
+.event-card {
+  border-radius: 20px;
+  background-color: $baby-powder;
+  padding: 4px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.event-show-card {
+  width: 100%;
+  height: 100%;
+
+    p {
+
+    }
+
+    li {
+      list-style: none;
+      margin-left: 0;
+    }
+  }
 
 
-
-
-// .card-stats {
-//         padding: 1rem 1.5rem;
-//         flex: 1 1 auto;
-//         min-height: 1px;
-//         padding: 1.25rem;
-//         background: azure;
-//         border-radius: 15px;
-//         margin: 10px;
-// }
-//     .card-status-bullet {
-//         position: absolute;
-//         top: 0;
-//         right: 0;
-//         transform: translate(50%, -50%);
-// }
-
-
-// .event-card {
-//     border-radius: 16px;
-//     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
-//     box-shadow: 0 5px 3px;
-//     justify-content: space-between;
-//     margin: 35px;
-//     display: flex;
-//     border: black;
-//     position: relative;
-//     flex-direction: column;
-//     min-width: 0;
-//     background-color: #fff;
-//     background-clip: border-box;
-//     color: black;
-
-//     .event-card-body {
-//       min-height: 1px;
-//       padding: 1.5rem;
-//       flex: 1 1 auto;
-//     }
-
-//     .event-card-chart {
-//       width: 100%;
-//     }
-// }
-
-// .small-card-2025 {
-//   background: #adce749c;
-//   border-radius: 10px;
-//   width: auto;
-//   color: $gray;
-
-//       div {
-//         justify-content: flex-end;
-//         margin-left: 10px;
-//       }
-// }
-
-// .small-card-2024 {
-//   background: #f788885e;
-//   border-radius: 10px;
-//   width: 300px;
-//   color: $gray;
-
-//       div {
-//         justify-content: flex-end;
-//         margin-left: 10px;
-//       }
-// }
-// .top-show {
-//   background-color: $light-gray;
-// }
-
-
-// // Fixes for custom elements inside tables
-
-// .event-table {
-//     .custom-toggle {
-//         display: block;
-//     }
-// }
-
-// .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
-//     position: relative;
-//     width: 100%;
-//     padding-right: 15px;
-//     padding-left: 15px;
-// }
