--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -25,7 +25,7 @@
       <%= render partial: 'schedules/week', locals: { schedule: @schedule, schedule_event: @schedule_event }   %>
     </div>
     <div class='col-xl-3'>
-      <%= render partial: 'schedules/upcoming_event', locals: { event: @event, athlete: @athlete }   %>
+      <%#= render partial: 'schedules/upcoming_event', locals: { event: @event, athlete: @athlete }   %>
     </div>
      <div class="my-5 py-5"></div>
   </div>
