FEAT: Updated Seed to be Women & have UDays

--- a/app/views/events/_month.html.erb
+++ b/app/views/events/_month.html.erb
@@ -19,7 +19,7 @@
           <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" data-controller='assign'>
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
@@ -31,7 +31,7 @@
           <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" data-controller='assign'>
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
@@ -43,7 +43,7 @@
           <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" data-controller='assign'>
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
@@ -55,7 +55,7 @@
           <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only"></span>
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" data-controller='assign'>
             <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event, team_members: team_members } %>
           </div>
         </div>
