--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,11 +1,11 @@
 <!-- <div data-controller="sweetalert"> -->
-<div class="mt-5 p-3 unavailable-card">
+<div class="mt-5 p-3 unavailable-card" data-controller='u_days'>
   <h3>Unavailable Days</h3>
 <%= simple_form_for(@unavailable_day) do |f| %>
   <%= f.input :date, as: :string, required: true, input_html: {class: "datepicker"} %>
     <%#= w.input :photos, as: :file, input_html: { multiple: true } %>
   <div class='dropdown-divider'></div>
-  <!-- <button data-action='click->sweetalert#trigger'> -->
+ <!--  <button data-action='click->u_days#trigger'> -->
     <%= f.submit class: 'form-partial-button', id: "sweet-alert-create" %>
   <!-- </button> -->
 <% end %>
