--- a/app/assets/stylesheets/athletes/index.scss
+++ b/app/assets/stylesheets/athletes/index.scss
@@ -72,6 +72,8 @@
   background-color: $baby-powder;
   padding: 4px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  overflow: scroll;
+  height: 724px;
 }
 
 .emoji_flag {
