FEAT: Coach Assigning Dropdown Officially Works

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -30,3 +30,9 @@
   padding: 4px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
+
+.coach-assigned {
+  font-size: 0.825rem;
+  margin-bottom: 0;
+  width: 100%;
+}
