FEAT: top navs added

--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -1,4 +1,4 @@
-<div class='mt-5 athlete-index-card'>
+<div class='my-3 athlete-index-card'>
 <div class="mt-1 container athlete-index-table">
 
   <h1>Top <%= current_user.team.sport.name  %> Athletes</h1>
