--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,7 +31,7 @@
       <!-- ***** Wellcome Area End ***** -->
 
       <!-- ***** Special Area Start ***** -->
-      <section class="special-area gradient-bck section_padding_100" id="about">
+      <section class="special-area gradient-bck section_padding_100" style="background-color: white;" id="about">
           <div class="container">
               <div class="row">
                   <div class="col-12">
