--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,7 +2,6 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
-@import "banner";
 @import "footer";
 @import "buttons";
 @import "ourteam";
@@ -13,3 +12,4 @@
 @import "forms";
 @import "header";
 @import "cards";
+@import "upcomingevent";
