--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,5 +1,6 @@
 .avatar {
   width: 40px;
+  height: 40px;
   border-radius: 50%;
 }
 .avatar-large {
@@ -34,5 +35,6 @@
 
 .avatar-small {
   width: 30px;
+  height: 30px;
   border-radius: 50%;
 }
