--- a/app/views/recruits/_recruits.html.erb
+++ b/app/views/recruits/_recruits.html.erb
@@ -39,7 +39,8 @@
             <th scope='row'>
             <%= link_to athlete_path(recruit.athlete) do %>
               <div class='d-flex justify-content-start'>
-                <%= image_tag "icon.png", class: 'avatar-small' %>
+                <% number = (1..8).to_a.sample %>
+              <%= cl_image_tag "athlete#{number}.jpg", class: 'avatar-small' %>
                 <span class='name d-flex ml-4'>
                   <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 </span>
@@ -56,7 +57,8 @@
             <th scope='row'>
             <%= link_to athlete_path(recruit.athlete) do %>
               <div class='d-flex justify-content-start'>
-                <%= image_tag "icon.png", class: 'avatar-small' %>
+               <% number = (1..8).to_a.sample %>
+              <%= cl_image_tag "athlete#{number}.jpg", class: 'avatar-small' %>
                 <span class='name d-flex ml-4'>
                   <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 </span>
@@ -73,7 +75,8 @@
             <th scope='row'>
             <%= link_to athlete_path(recruit.athlete) do %>
               <div class='d-flex justify-content-start'>
-                <%= image_tag "icon.png", class: 'avatar-small' %>
+                <% number = (1..8).to_a.sample %>
+              <%= cl_image_tag "athlete#{number}.jpg", class: 'avatar-small' %>
                 <span class='name d-flex ml-4'>
                   <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 </span>
@@ -90,7 +93,8 @@
             <th scope='row'>
             <%= link_to athlete_path(recruit.athlete) do %>
               <div class='d-flex justify-content-start'>
-                <%= image_tag "icon.png", class: 'avatar-small' %>
+                <% number = (1..8).to_a.sample %>
+              <%= cl_image_tag "athlete#{number}.jpg", class: 'avatar-small' %>
                 <span class='name d-flex ml-4'>
                   <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 </span>
